--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="intent_scheme">oauth</string>
     <string name="intent_host">cprest</string>
     <string name="tweet">Tweet</string>
+    <string name="actionLink"><a href="http://www.google.com">Google</a></string>
 
 </resources>
