--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="intent_host">cprest</string>
     <string name="tweet">Tweet</string>
     <string name="actionLink"><a href="http://www.google.com">Google</a></string>
-
+    <string name="date">Date</string>
 </resources>
